# Proyecto-Final

./: Archivero.cpp  Archivero.h  Autor.cpp  Autor.h  CMakeLists.txt  Clases.cpp  Clases.h  Clases.txt  Comentario.cpp  Comentario.h  Comentarios.cpp  Comentarios.h  NEWS.cpp  Noticia.cpp  Noticia.h  Persona.cpp  Persona.h  Proyecto.cpp  README.md  Sketch  Usuario.cpp  Usuario.h  archivero.cpp  autor.cpp  autor.h  comentario.cpp  comentario.h  noticia.cpp  noticia.h  usuario.cpp
