cmake_minimum_required(VERSION 3.26)
project(Proyecto)

set(CMAKE_CXX_STANDARD 17)

add_executable(Clases Clases.cpp)
add_executable(NEWS NEWS.cpp)
add_executable(autor Autor.cpp)
add_executable(Persona Persona.cpp)
add_executable(usuario Usuario.cpp)
add_executable(noticia Noticia.cpp)
add_executable(comentario Comentario.cpp)
add_executable(archivero Archivero.cpp)
