cmake_minimum_required(VERSION 3.26)
project(Proyecto)

set(CMAKE_CXX_STANDARD 17)


add_executable(Clases Clases.cpp)
add_executable(NEWS NEWS.cpp)
add_executable(Autor Autor.cpp)
add_executable(Persona Persona.cpp)
add_executable(Usuario Usuario.cpp)
add_executable(Noticia Noticia.cpp)
add_executable(Comentarios Comentarios.cpp)
add_executable(Archivero Archivero.cpp
        Archivero.cpp)

